# docker-setup

./: README.md
python-api/: Dockerfile  Makefile  docker-compose.yml
python-api-sql/: Dockerfile  pyproject.toml
